force-app/main/default/objects/Door__c/Door__c.object-meta.xml
<CustomObject>
    <label>Door</label>
    <nameField>
        <label>Door-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>