force-app/main/default/objects/Door__c/fields/ProcessPaint__c.field-meta.xml
<CustomField>
    <fullName>ProcessPaint__c</fullName>
    <description>Which color is it now? Two Process Builder paint this field either color.</description>
    <label>Process Paint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>