force-app/main/default/objects/Door__c/fields/TriggerPaint__c.field-meta.xml
<CustomField>
    <fullName>TriggerPaint__c</fullName>
    <description>Which color is it now? Two Triggers paint this field in either color</description>
    <label>Trigger Paint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>