force-app/main/default/objects/Door__c/fields/WorkflowPaint__c.field-meta.xml
<CustomField>
    <fullName>WorkflowPaint__c</fullName>
    <description>Which color is it now? Two workflows paint this field red or green</description>
    <label>Workflow Paint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LightRed</fullName>
                <label>Light Red</label>
            </value>
            <value>
                <fullName>LightGreen</fullName>
                <label>Light Green</label>
            </value>
            <value>
                <fullName>DarkRed</fullName>
                <label>Dark Red</label>
            </value>
            <value>
                <fullName>DarkGreen</fullName>
                <label>Dark Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>