force-app/main/default/objects/Door__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessPaint__c</columns>
    <columns>TriggerPaint__c</columns>
    <columns>WorkflowPaint__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>